# mcp-cm3588

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  README_ru.md  README_zh.md  docker-compose.yml  pyproject.toml
src/mcp_cm3588/: __init__.py  config.py  init_knowledge.py  server.py
src/mcp_cm3588/prompts/: __init__.py
src/mcp_cm3588/resources/: __init__.py
src/mcp_cm3588/storage/: __init__.py  qdrant.py
src/mcp_cm3588/tools/: __init__.py  ssh.py
